Bug 228294 - Save As broken since recent commit
Summary: Save As broken since recent commit
Status: RESOLVED FIXED
Alias: None
Product: kwebkitpart
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: webkit-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-24 12:40 UTC by Cédric Bellegarde
Modified: 2010-03-04 18:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cédric Bellegarde 2010-02-24 12:40:30 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

Since recent kwebkitpart checkout from svn, i can't save link/pages with save as (Ctrl + s)...

Switching to khtml part fix the problem.
Comment 1 Dawit Alemayehu 2010-02-24 16:48:11 UTC
SVN commit 1095583 by adawit:

Restored accidentally removed slot/signal connection.

BUG:228294


 M  +2 -0      kwebkitpart_p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1095583
Comment 2 Cédric Bellegarde 2010-02-24 18:51:38 UTC
Update to current svn, bug always here.
Comment 3 Dawit Alemayehu 2010-02-25 00:14:50 UTC
On Wednesday 24 February 2010 12:51:39 Bellegarde Cédric wrote:
> https://bugs.kde.org/show_bug.cgi?id=228294
> 
> 
> Bellegarde Cédric <gnumdk@gmail.com> changed:
> 
>            What    |Removed                     |Added
> ---------------------------------------------------------------------------
> - Status|RESOLVED                    |UNCONFIRMED
>          Resolution|FIXED                       |
> 
> 
> 
> 
> --- Comment #2 from Bellegarde Cédric <gnumdk gmail com>  2010-02-24
> 18:51:38 --- Update to current svn, bug always here.


If your bug report was about the shortcut key CTRL+S not working, then it has 
nothing to do with any changes made. The issue is for some reason in Konqueror 
CTRL+S by default is assigned as a shortcut for "Focus Searchbar" ; so if the 
issue is about the shortcut not working, it should not be specific to 
kwebkitpart. I dunno why it would work in khtml for you. Please check the 
shortcut configuration dialog under "Settings/Configure Shortcuts" to see what 
keys are assigned to what items...
Comment 4 Cédric Bellegarde 2010-02-25 08:48:26 UTC
Sorry, there is no problem with Ctrl +S, the bug is:

- "File -> Save as" not working
- "Right click on a link -> Save as" not working
Comment 5 Dawit Alemayehu 2010-02-25 09:41:34 UTC
SVN commit 1095917 by adawit:

Brown paper bag mistake! 

Properly commented out code meant for future enhancement. Restores all
"Save As..." functionality as it was before.

CCBUG:228294


 M  +6 -3      webpage.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1095917