Restored accidentally removed slot/signal connection.

BUG:228294